# BP-VGP

./: .gitignore  CMakeLists.txt  README.md
include/: act_utils.h  bst_utils.h  cli_functions.h  csv2ser.h  db_file.h  db_functions.h  init_db.h  menu.h  seq2act.h  ser2seq.h  utils.h  vgp.h
include/tests/: active_file.h  db_functions.h  seq_file.h  test_data.h
src/: act_utils.c  bst_utils.c  build_index_file.c  build_main_file.c  cli_functions.c  csv2ser.c  db_file.c  db_functions.c  init_db.c  menu.c  seq2act.c  ser2seq.c  utils.c  vgp.c
tests/: active_file.c  data_gen.py  db_functions.c  seq_file.c  test-suite.c  test_data.c
